--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <h1>Welcome</h1>
         <ul>
             <li><a href="www.trevorm.info/">Home</a></li>
-            <li><a href="www.trevorm.info/about_me">About Me</a></li>
-            <li><a href="www.trevorm.info/portfilo">Portfilo</a></li>
-            <li><a href="www.trevorm.info/profession_image">Professional Image</a></li>
-            <li><a href="www.trevorm.info/service">Service</a></li>
+            <li><a href="about_me.html">About Me</a></li>
+            <li><a href="portfilo.html">Portfilo</a></li>
+            <li><a href="profession_image.html">Professional Image</a></li>
+            <li><a href="service.html">Service</a></li>
 
         </ul>
             
