--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+        <![endif]-->    
         <h1>Welcome</h1>
         <ul>
-            <li><a href="www.trevorm.info/">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about_me.html">About Me</a></li>
             <li><a href="portfilo.html">Portfilo</a></li>
             <li><a href="profession_image.html">Professional Image</a></li>
