--- a/about_me.html
+++ b/about_me.html
@@ -1,4 +1,4 @@
-/<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -9,14 +9,25 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="topnav.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <p>About Me page</p>
-        <p>This paragraph will contain the information about me.</p>
+        <div>
+                <h1>
+                    About Me
+                </h1>
+            </div>
+            <div class="topnav">
+                <a href="index.html">Home</a>
+                 <a class="active" href="about_me.html">About Me</a>
+                 <a href="portfilo.html">Portfilo</a>
+                 <a href="profession_image.html">Professional Image</a>
+                 <a href="service.html">Service</a>
+             </ul>
+         </div>
         
         <script src="" async defer></script>
     </body>
