--- a/about_me.html
+++ b/about_me.html
@@ -1,34 +1,75 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>About Me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="topnav.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <div>
-                <h1>
-                    About Me
-                </h1>
-            </div>
             <div class="topnav">
                 <a href="index.html">Home</a>
                  <a class="active" href="about_me.html">About Me</a>
                  <a href="portfilo.html">Portfilo</a>
-                 <a href="profession_image.html">Professional Image</a>
+                 <a href="profession_image.html">Resume/CV</a>
                  <a href="service.html">Service</a>
              </ul>
          </div>
+         <div>
+                 <h1>
+                     About Me
+                 </h1>
+             </div>
+             <div>
+                 <p>
+                     Howdy! 
+                     <br>
+                     My name is Trevor. I am a junior studing, <a href="https://engineering.tamu.edu/cse/index.html">Computer Science and Engineering</a>.
+                      My career goals are to be 
+                     a <a href="https://en.wikipedia.org/wiki/Software_engineer">software engineer</a> in the energy sector, then move into real estate investment. Most of my family is
+                     in the real estate market as a <a href="https://www.har.com/jason-moore/agent_MOOREJAY">realtor</a> 
+                      or <a href="http://www.homeusa.com/team">loan officer</a>. So, the information passed on to me would make me 
+                     very productive in that market.
+                 </p>
+                 <h1>Interests </h1>
+                 <div>
+
+                    <h2>Data Science </h2>
+                    <p>
+                        I took a <a href="https://www.stat.tamu.edu/">Statics class</a>  my sophomore year of college, and it peaked my interest. 
+                        I would need more about the data science field before I decided to take my career in that
+                        direction. However, I really liked the little exposure I had to it. 
+                    </p>
+                </div>
+
+                 <h2>Software Engineering</h2>
+                 <p>
+                     In summer 2019, I had an intership at <a href="https://www.edpr.com/">EDP Renewables</a>. They are a renewable energy company specilizing in 
+                     wind farms. I was apart of the central maintenance team. Our main responisblility was keeping the wind turbine
+                     online. Apart of keeping the turbines online was making sure we had spare parts for our turbines. So, one of my projects
+                     was to develop a Random Inventory Auditor that would generate a report of spare parts to count. This was keep our stock
+                     levels correct. Developing this Random Invetory Auditor was my largest coding project and my introduction into software
+                     engineering. I'm excited to take on more larger projects like the Random Inventory Auditor.
+
+                 </p>
+                 <h2>Slalom Skiing</h2>
+                 <p>
+                     I joined the <a href="https://maroonlink.tamu.edu/organization/waterskiclub">TAMU ski team </a> because I wanted to get better at skiing. Skiing has always been a part 
+                     of my family. My dad grew up doing. My mom grew up doing. Naturally, they passed that passion on 
+                     to me. However, my family only goes to the lake once a summer, so I have never got practice into 
+                     get good at skiing. Now that I am on the ski team, I plan on overtaking my mom as the best skiier in
+                     the family. 
+                 </p>
+             </div>
         
-        <script src="" async defer></script>
-    </body>
+            </div>
+            <div class="footer">
+            <h2>Contact</h2>
+            <p>
+                Email: <a href="moore.trev@tamu.edu">moore.trev@tamu.edu</a>
+                <br> Phone: (281) 253-1128
+                <br> Instagram: moore.trev
+            </p>
+         </div>    </body>
 </html>
