--- a/portfilo.html
+++ b/portfilo.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Portfilo</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="topnav.css">
@@ -15,19 +15,45 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div>
-            <h1>
-                Portfilo Page
-            </h1>
-        </div>
         <div class="topnav">
             <a href="index.html">Home</a>
              <a href="about_me.html">About Me</a>
              <a class="active" href="portfilo.html">Portfilo</a>
-             <a href="profession_image.html">Professional Image</a>
+             <a href="profession_image.html">Resume/CV</a>
              <a href="service.html">Service</a>
          </ul>
      </div>
+     <div>
+        <h1>Portfilo Page</h1>
+        <p>
+            I have two projects that proud enough to show off. The first was the Random Inventory Auditor which
+            was mentioned in the about me page. The second is checker app that I worked on while I was bored during
+            the summer.
+        </p>
+        <h2><a href="https://github.com/mooretrev/UploadRandomInventory">Random Inventory Auditor</a></h2>
+         <p>
+             I mentioned the program a little bit in the about me page, but I will full explain its purpose here. 
+             The purpose was for program to create a report of spare parts to be counted. Also, the report was weighted 
+             towards more expensive items, so we were counting the more valuable parts. This program was to help us have 
+             more accurate data of what is in inventory.
+         </p>
+         <h2><a href="https://github.com/mooretrev/Checkers">Checkers</a></h2>
+         <p>
+             This was my attempt and making a iOS game. I added half of the checkers game. Meaning the game would force
+             you to take turns and you could jump other players. However, there were no double jumps or kings. 
+
+         </p>
+    </div>
+
+    </div>
+    <div class="footer">
+    <h2>Contact</h2>
+    <p>
+        Email: <a href="moore.trev@tamu.edu">moore.trev@tamu.edu</a>
+        <br> Phone: (281) 253-1128
+        <br> Instagram: moore.trev
+    </p>
+    </div>
         
         <script src="" async defer></script>
     </body>
