--- a/service.html
+++ b/service.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Service</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="topnav.css">
@@ -15,19 +15,34 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div>
-            <h1>
-                Service Page
-            </h1>
-        </div>
         <div class="topnav">
             <a href="index.html">Home</a>
              <a href="about_me.html">About Me</a>
              <a href="portfilo.html">Portfilo</a>
-             <a href="profession_image.html">Professional Image</a>
+             <a href="profession_image.html">Resume/CV</a>
              <a class="active" href="service.html">Service</a>
          </ul>
      </div>
+     <div>
+         <h1>
+             Service
+         </h1>
+         <h2>Christmas Day Homeless Help</h2>
+         <p>
+            I helped serve dinner and pass out clothing for the homeless on Christmas day. This event was hosted by the lds
+            <a href="https://www.churchofjesuschrist.org/?lang=eng">lds church</a>.
+         </p>
+     </div>
+    </div>
+    
+    <div class="footer">
+    <h2>Contact</h2>
+    <p>
+        Email: <a href="moore.trev@tamu.edu">moore.trev@tamu.edu</a>
+        <br> Phone: (281) 253-1128
+        <br> Instagram: moore.trev
+    </p>
+ </div>
         
         <script src="" async defer></script>
     </body>
