--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
 
-        <div class="body">
+        <!-- <div class="body">
             <h1>Howdy Y'all!</h1>
             <h2>My name is Trevor Moore</h2>
             <h1>Professional Goal</h1>
@@ -38,6 +38,11 @@
                 Proficient in Python, C++
                 <br>Component in Java
             </p>
+
+        </div> -->
+        <div class="container">
+                <img src="home.jpg" alt="computer_pic" class="center">
+                <div class="centered"> <h1>Trevor Moore</h1></div>
 
         </div>
             <div class="footer">
