--- a/portfilo.html
+++ b/portfilo.html
@@ -26,20 +26,31 @@
      <div>
         <h1>Portfilo Page</h1>
         <p>
-            I have two projects that proud enough to show off. The first was the Random Inventory Auditor which
-            was mentioned in the about me page. The second is checker app that I worked on while I was bored during
-            the summer.
+            I have three projects that I am proud to show off. The first is the Random Inventory Auditor which
+            was created while at my internship at EDP Renewables. The second is a Checkers app that I worked on during my 
+            freetime at the end of Spring 2019 semester. 
         </p>
         <h2><a href="https://github.com/mooretrev/UploadRandomInventory">Random Inventory Auditor</a></h2>
          <p>
-             I mentioned the program a little bit in the about me page, but I will full explain its purpose here. 
-             The purpose was for program to create a report of spare parts to be counted. Also, the report was weighted 
-             towards more expensive items, so we were counting the more valuable parts. This program was to help us have 
-             more accurate data of what is in inventory.
+             I mentioned my Random Inventory Auditor a little bit in the about me page, but I will full explain it here. 
+             During summer 2019, I had an internship at EDP Renewables. They are an renewable energy company that specializes
+             in wind farms. I was on the central maintenance team, and our responsibility was to keep the wind turbines online. 
+             Part of doing this is ordering parts to repair damage components, and keeping stock of components that break often. I 
+             was tasked with coming up with a better way to do our cycle counts. A cycle count is where we go in and count a sample of randomly selected components.
+            My solution was the Random Inventory Auditor. The way this program would work is first you would select the wind 
+             farm location to run a cycle count on. Second, you'd specify the number of components you wanted to count. 
+             Third, you would choose an output location and click generate. This would produce a weighted randomized list of components 
+             to count. The weighted list would give a higher probability of being selected to components that costed more. This ensured the expensive components
+             were counted while some inexpensive components as well. This program made EDPR's inventory data become more accurate. In turn, reducing
+             wind turbine down time by having spare parts at the wind farm site. 
          </p>
          <h2><a href="https://github.com/mooretrev/Checkers">Checkers</a></h2>
          <p>
-             This was my attempt and making a iOS game. I added half of the checkers game. Meaning the game would force
+            I want to learn how to make an iOS game, and I thought checkers would be an easier start than chess. 
+            With this project, I was able to add about half of the checkers functionallity. So, piece could jump each
+            other and the game would force you to take turns. However, I did not add kings or double jumps into the game. 
+            I learned a lot about code organization 
+            This was my attempt and making a iOS game. I added half of the checkers game. Meaning the game would force
              you to take turns and you could jump other players. However, there were no double jumps or kings. 
 
          </p>
