--- a/about_me.html
+++ b/about_me.html
@@ -25,8 +25,8 @@
                  <p>
                      Howdy! 
                      <br>
-                     My name is Trevor. I am a junior studing, <a href="https://engineering.tamu.edu/cse/index.html">Computer Science and Engineering</a>.
-                      My career goals are to be 
+                     My name is Trevor. I am a junior studing <a href="https://engineering.tamu.edu/cse/index.html">Computer Science and Engineering</a>.
+                      My career goal is to be 
                      a <a href="https://en.wikipedia.org/wiki/Software_engineer">software engineer</a> in the energy sector, then move into real estate investment. Most of my family is
                      in the real estate market as a <a href="https://www.har.com/jason-moore/agent_MOOREJAY">realtor</a> 
                       or <a href="http://www.homeusa.com/team">loan officer</a>. So, the information passed on to me would make me 
@@ -37,29 +37,27 @@
 
                     <h2>Data Science </h2>
                     <p>
-                        I took a <a href="https://www.stat.tamu.edu/">Statics class</a>  my sophomore year of college, and it peaked my interest. 
-                        I would need more about the data science field before I decided to take my career in that
-                        direction. However, I really liked the little exposure I had to it. 
+                        I took a <a href="https://www.stat.tamu.edu/">statistics class</a>  my sophomore year of college, and I enjoyed it. 
+                        I plan on learning more about the field. However, I really liked the little exposure I had to it. 
                     </p>
                 </div>
 
                  <h2>Software Engineering</h2>
                  <p>
-                     In summer 2019, I had an intership at <a href="https://www.edpr.com/">EDP Renewables</a>. They are a renewable energy company specilizing in 
-                     wind farms. I was apart of the central maintenance team. Our main responisblility was keeping the wind turbine
+                     During summer 2019, I had an internship at <a href="https://www.edpr.com/">EDP Renewables</a>. They are a renewable energy company specializing in 
+                     wind farms. I was apart of the central maintenance team. Our main responsibility was keeping the wind turbines
                      online. Apart of keeping the turbines online was making sure we had spare parts for our turbines. So, one of my projects
-                     was to develop a Random Inventory Auditor that would generate a report of spare parts to count. This was keep our stock
-                     levels correct. Developing this Random Invetory Auditor was my largest coding project and my introduction into software
-                     engineering. I'm excited to take on more larger projects like the Random Inventory Auditor.
+                     was to develop a Random Inventory Auditor that would generate a report of spare parts to count. The purpose of this was to keep our stock
+                     as correct as possilble. Developing this Random Invetory Auditor was my largest coding project and my introduction into software
+                     engineering. I'm excited to take on more larger projects and learn what this field has to offer.
 
                  </p>
                  <h2>Slalom Skiing</h2>
                  <p>
                      I joined the <a href="https://maroonlink.tamu.edu/organization/waterskiclub">TAMU ski team </a> because I wanted to get better at skiing. Skiing has always been a part 
-                     of my family. My dad grew up doing. My mom grew up doing. Naturally, they passed that passion on 
-                     to me. However, my family only goes to the lake once a summer, so I have never got practice into 
-                     get good at skiing. Now that I am on the ski team, I plan on overtaking my mom as the best skiier in
-                     the family. 
+                     of my family. It something my mom and dad grew up doing, so naturally, they passed that passion on 
+                     to me. However, my family only goes to the lake once a summer, so I have never got comfortable.
+                     Now that I am on the ski team, I plan on giving my mom some competition for the best skier.
                  </p>
              </div>
         
