More Prof reading

--- a/portfilo.html
+++ b/portfilo.html
@@ -26,7 +26,7 @@
      <div>
         <h1>Portfilo Page</h1>
         <p>
-            I have three projects that I am proud to show off. The first is the Random Inventory Auditor which
+            I have two projects that I am proud to show off. The first is the Random Inventory Auditor which
             was created while at my internship at EDP Renewables. The second is a Checkers app that I worked on during my 
             freetime at the end of Spring 2019 semester. 
         </p>
@@ -46,12 +46,10 @@
          </p>
          <h2><a href="https://github.com/mooretrev/Checkers">Checkers</a></h2>
          <p>
-            I want to learn how to make an iOS game, and I thought checkers would be an easier start than chess. 
-            With this project, I was able to add about half of the checkers functionallity. So, piece could jump each
+            I wanted to learn how to make an iOS game, and I thought checkers would be an easier start than chess. 
+            With this project, I was able to add about half of the checkers functionality. So, pieces could jump each
             other and the game would force you to take turns. However, I did not add kings or double jumps into the game. 
-            I learned a lot about code organization 
-            This was my attempt and making a iOS game. I added half of the checkers game. Meaning the game would force
-             you to take turns and you could jump other players. However, there were no double jumps or kings. 
+            I learned about swift and code organization during this project. 
 
          </p>
     </div>
