--- a/about_me.html
+++ b/about_me.html
@@ -25,9 +25,9 @@
                  <p>
                      Howdy! 
                      <br>
-                     My name is Trevor. I am a junior studing <a href="https://engineering.tamu.edu/cse/index.html">Computer Science and Engineering</a>.
+                     My name is Trevor. I am a junior studying <a href="https://engineering.tamu.edu/cse/index.html">Computer Science and Engineering</a>.
                       My career goal is to be 
-                     a <a href="https://en.wikipedia.org/wiki/Software_engineer">software engineer</a> in the energy sector, then move into real estate investment. Most of my family is
+                     a <a href="https://en.wikipedia.org/wiki/Software_engineer">software engineer</a> in the energy sector, then move on to real estate investment. Most of my family is
                      in the real estate market as a <a href="https://www.har.com/jason-moore/agent_MOOREJAY">realtor</a> 
                       or <a href="http://www.homeusa.com/team">loan officer</a>. So, the information passed on to me would make me 
                      very productive in that market.
@@ -38,17 +38,17 @@
                     <h2>Data Science </h2>
                     <p>
                         I took a <a href="https://www.stat.tamu.edu/">statistics class</a>  my sophomore year of college, and I enjoyed it. 
-                        I plan on learning more about the field. However, I really liked the little exposure I had to it. 
+                        I really liked the little exposure I had to it, and I plan on learning more about the field. 
                     </p>
                 </div>
 
                  <h2>Software Engineering</h2>
                  <p>
                      During summer 2019, I had an internship at <a href="https://www.edpr.com/">EDP Renewables</a>. They are a renewable energy company specializing in 
-                     wind farms. I was apart of the central maintenance team. Our main responsibility was keeping the wind turbines
+                     wind farms. I was a part of the central maintenance team. Our main responsibility was keeping the wind turbines
                      online. Apart of keeping the turbines online was making sure we had spare parts for our turbines. So, one of my projects
                      was to develop a Random Inventory Auditor that would generate a report of spare parts to count. The purpose of this was to keep our stock
-                     as correct as possilble. Developing this Random Invetory Auditor was my largest coding project and my introduction into software
+                     as correct as Possible. Developing this Random Inventory Auditor was my largest coding project and my introduction into software
                      engineering. I'm excited to take on more larger projects and learn what this field has to offer.
 
                  </p>
@@ -56,7 +56,7 @@
                  <p>
                      I joined the <a href="https://maroonlink.tamu.edu/organization/waterskiclub">TAMU ski team </a> because I wanted to get better at skiing. Skiing has always been a part 
                      of my family. It something my mom and dad grew up doing, so naturally, they passed that passion on 
-                     to me. However, my family only goes to the lake once a summer, so I have never got comfortable.
+                     to me. However, my family only goes to the lake once a summer, so I have never got comfortable skiing.
                      Now that I am on the ski team, I plan on giving my mom some competition for the best skier.
                  </p>
              </div>
