--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="topnav">
                <a class="active" href="index.html">Home</a>
                 <a href="about_me.html">About Me</a>
-                <a href="portfilo.html">Portfilo</a>
+                <a href="portfilo.html">Portfolio</a>
                 <a href="profession_image.html">Resume/CV</a>
                 <a href="service.html">Service</a>
             </ul>
