--- a/portfilo.html
+++ b/portfilo.html
@@ -18,13 +18,13 @@
         <div class="topnav">
             <a href="index.html">Home</a>
              <a href="about_me.html">About Me</a>
-             <a class="active" href="portfilo.html">Portfilo</a>
+             <a class="active" href="portfilo.html">Portfolio</a>
              <a href="profession_image.html">Resume/CV</a>
              <a href="service.html">Service</a>
          </ul>
      </div>
      <div>
-        <h1>Portfilo Page</h1>
+        <h1>Portfolio Page</h1>
         <p>
             I have two projects that I am proud to show off. The first is the Random Inventory Auditor which
             was created while at my internship at EDP Renewables. The second is a Checkers app that I worked on during my 
