--- a/about_me.html
+++ b/about_me.html
@@ -11,7 +11,7 @@
             <div class="topnav">
                 <a href="index.html">Home</a>
                  <a class="active" href="about_me.html">About Me</a>
-                 <a href="portfilo.html">Portfilo</a>
+                 <a href="portfilo.html">Portfolio</a>
                  <a href="profession_image.html">Resume/CV</a>
                  <a href="service.html">Service</a>
              </ul>
