--- a/service.html
+++ b/service.html
@@ -18,7 +18,7 @@
         <div class="topnav">
             <a href="index.html">Home</a>
              <a href="about_me.html">About Me</a>
-             <a href="portfilo.html">Portfilo</a>
+             <a href="portfilo.html">Portfolio</a>
              <a href="profession_image.html">Resume/CV</a>
              <a class="active" href="service.html">Service</a>
          </ul>
