Fixed spelling mistake

--- a/about_me.html
+++ b/about_me.html
@@ -39,14 +39,14 @@
 
                     <h2>Data Science </h2>
                     <p>
-                        I took a <a href="https://www.stat.tamu.edu/">statistics class</a>  my sophomore year of college, and I enjoyed it. 
+                        I took a <a href="https://www.stat.tamu.edu/" target="_blank">statistics class</a>  my sophomore year of college, and I enjoyed it. 
                         I really liked the little exposure I had to it, and I plan on learning more about the field. 
                     </p>
                 </div>
 
                  <h2>Software Engineering</h2>
                  <p>
-                     During summer 2019, I had an internship at <a href="https://www.edpr.com/">EDP Renewables</a>. They are a renewable energy company specializing in 
+                     During summer 2019, I had an internship at <a href="https://www.edpr.com/" target="_blank">EDP Renewables</a>. They are a renewable energy company specializing in 
                      wind farms. I was a part of the central maintenance team. Our main responsibility was keeping the wind turbines
                      online. Apart of keeping the turbines online was making sure we had spare parts for our turbines. So, one of my projects
                      was to develop a Random Inventory Auditor that would generate a report of spare parts to count. The purpose of this was to keep our stock
@@ -56,7 +56,7 @@
                  </p>
                  <h2>Slalom Skiing</h2>
                  <p>
-                     I joined the <a href="https://maroonlink.tamu.edu/organization/waterskiclub">TAMU ski team </a> because I wanted to get better at skiing. Skiing has always been a part 
+                     I joined the <a href="https://maroonlink.tamu.edu/organization/waterskiclub" target="_blank">TAMU ski team </a> because I wanted to get better at skiing. Skiing has always been a part 
                      of my family. It something my mom and dad grew up doing, so naturally, they passed that passion on 
                      to me. However, my family only goes to the lake once a summer, so I have never got comfortable skiing.
                      Now that I am on the ski team, I plan on giving my mom some competition for the best skier.
@@ -70,6 +70,8 @@
                 Email: <a href="moore.trev@tamu.edu">moore.trev@tamu.edu</a>
                 <br> Phone: (281) 253-1128
                 <br> Instagram: moore.trev
+                <br> GitHub: <a href="https://github.com/mooretrev" target="_blank"> mooretrev</a>
+                <br> Linkedin: <a href="https://www.linkedin.com/in/mooretrev/" target="_blank">mooretrev</a>
             </p>
          </div>    </body>
 </html>
