--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div> -->
         <div class="container">
                 <img src="Images/intro_graphic.png" alt="computer_pic" class="center">
-                <div class="centered"> <h1>Trevor Moore</h1><h2>Junior Studing Computer Science at Texas A&M</h2></div>
+                <div class="centered"> <h1>Trevor Moore</h1><h2>Junior Studying Computer Science at Texas A&M</h2></div>
 
         </div>
             <div class="footer">
@@ -51,6 +51,8 @@
                 Email: <a href="moore.trev@tamu.edu">moore.trev@tamu.edu</a>
                 <br> Phone: (281) 253-1128
                 <br> Instagram: moore.trev
+                <br> GitHub: <a href="https://github.com/mooretrev" target="_blank">mooretrev</a>
+                <br> Linkedin: <a href="https://www.linkedin.com/in/mooretrev/" target="_blank">mooretrev</a>
             </p>
          </div>
 
