--- a/portfilo.html
+++ b/portfilo.html
@@ -61,6 +61,8 @@
         Email: <a href="moore.trev@tamu.edu">moore.trev@tamu.edu</a>
         <br> Phone: (281) 253-1128
         <br> Instagram: moore.trev
+        <br> GitHub: <a href="https://github.com/mooretrev">mooretrev</a>
+        <br> Linkedin: <a href="https://www.linkedin.com/in/mooretrev/">mooretrev</a>
     </p>
     </div>
         
