--- a/service.html
+++ b/service.html
@@ -29,8 +29,12 @@
          </h1>
          <h2>Christmas Day Homeless Help</h2>
          <p>
-            I helped serve dinner and pass out clothing for the homeless on Christmas day. This event was hosted by the lds
-            <a href="https://www.churchofjesuschrist.org/?lang=eng">lds church</a>.
+            On Christmas day 2018, I volunteered with the <a href="https://www.churchofjesuschrist.org/?lang=eng">LDS church </a>to help run a homeless help shelter. At the shelter, we fed anyone that came in. Once they were done eating, we had a clothing table where we gave out pants and coats. I ran the pants table, so I would find the best pair of pants for anyone that came by. This event was extremely humbling, and made me appreciate what I have in life.             
+         </p>
+         <h2>Hurricane Harvey Help</h2>
+         <p>
+            I live in Houston, and as you might know, <a href="https://www.thebalance.com/hurricane-harvey-facts-damage-costs-4150087" target="_blank">Hurricane Harvey</a>  flooded Houston. My family was very lucky, and our house did not flood. However, there were a lot of houses around us that did flood. So, when the roads were drivable again, we went out and helped tear out the damaged floors and dry wall, so the experience contractors could skip the demolition step. This reduced the amount of time and cost of putting new drywall and floors for the affected. This experience was humbling and made me realize how lucky our family was.
+
          </p>
      </div>
     </div>
@@ -41,6 +45,9 @@
         Email: <a href="moore.trev@tamu.edu">moore.trev@tamu.edu</a>
         <br> Phone: (281) 253-1128
         <br> Instagram: moore.trev
+        <br> GitHub: <a href="https://github.com/mooretrev">mooretrev</a>
+        <br> Linkedin: <a href="https://www.linkedin.com/in/mooretrev/">mooretrev</a>
+
     </p>
  </div>
         
