updated meet list

--- a/html/powerlift_meets.html
+++ b/html/powerlift_meets.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Powerlifting Meets</title>
     <link rel="stylesheet" href="../public/style.css">
+    <link rel="stylesheet" href="../public/nav_bar.css">
 </head>
 <body>
-    <h1 id='title'>Power Lifting</h1>
+    <div class="topnav">
+        <a href="../index.html">Home</a>
+        <a class="active" href="./html/powerlift_meets.html">Power Lifting</a>
+      </div>
 
-    <h2>july 41</h2>
-    <h2>july 41</h2>
+    <h1 id='title'>Meet Dates</h1>
+    <div id="meets" class='flexbox-container'></div>
 
-
-    <div id="meets"></div>
-
-    <!-- <script type="module" src="../js/loadJSON.js"></script> -->
     <script id="data" type="module" src="../js/powerlifting.js"></script>
-
 </body>
 </html>
