rough power lifting results posted

--- a/html/meet_results.html
+++ b/html/meet_results.html
@@ -4,8 +4,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meet Results</title>
+    <link rel="stylesheet" href="../public/style.css">
+    <link rel="stylesheet" href="../public/nav_bar.css">
+    <link rel="stylesheet" href="../public/meet_result.css">
 </head>
 <body>
-    <h1>Meet Results</h1>
+    <div class="topnav">
+        <a href="../index.html">Home</a>
+        <a class="active" href="./powerlift_meets.html">Power Lifting</a>
+      </div>
+
+    <h1 id='title'>Meet Results</h1>
+
+    <!-- <div id="results"></div> -->
+
+    <!-- <div class="flex-container">
+        <div class="row">
+            <div class="cell">
+                <h2>Trevor</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="cell">
+                <h2>Squat</h2>
+            </div>
+            <div class="cell">
+                <h2>385</h2>
+            </div>
+            <div class="cell">
+                <h2>405</h2>
+            </div>
+            <div class="cell">
+                <h2>415</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="cell">
+                <h2>Squat</h2>
+            </div>
+            <div class="cell">
+                <h2>385</h2>
+            </div>
+            <div class="cell">
+                <h2>405</h2>
+            </div>
+            <div class="cell">
+                <h2>415</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="cell">
+                <h2>Squat</h2>
+            </div>
+            <div class="cell">
+                <h2>385</h2>
+            </div>
+            <div class="cell">
+                <h2>405</h2>
+            </div>
+            <div class="cell">
+                <h2>415</h2>
+            </div>
+        </div>
+    </div>
+    <div class="flex-container">
+        <div class="row">
+            <div class="cell">
+                <h2>Trevor</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="cell">
+                <h2>Squat</h2>
+            </div>
+            <div class="cell">
+                <h2>385</h2>
+            </div>
+            <div class="cell">
+                <h2>405</h2>
+            </div>
+            <div class="cell">
+                <h2>415</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="cell">
+                <h2>Squat</h2>
+            </div>
+            <div class="cell">
+                <h2>385</h2>
+            </div>
+            <div class="cell">
+                <h2>405</h2>
+            </div>
+            <div class="cell">
+                <h2>415</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="cell">
+                <h2>Squat</h2>
+            </div>
+            <div class="cell">
+                <h2>385</h2>
+            </div>
+            <div class="cell">
+                <h2>405</h2>
+            </div>
+            <div class="cell">
+                <h2>415</h2>
+            </div>
+        </div>
+    </div> -->
+    <script type='module' src='../js/meet_results.js'></script>
 </body>
 </html>
