--- a/html/powerlift_meets.html
+++ b/html/powerlift_meets.html
@@ -14,6 +14,8 @@
       </div>
 
     <h1 id='title'>Meet Dates</h1>
+
+    <!-- <form action="./meet_results.html" method='GET'></form> -->
     <div id="meets" class='flexbox-container'></div>
 
     <script id="data" type="module" src="../js/powerlifting.js"></script>
