added cards to the meet results

--- a/html/meet_results.html
+++ b/html/meet_results.html
@@ -19,51 +19,53 @@
     <!-- <div id="results"></div> -->
 
     <!-- <div class="flex-container">
-        <div class="row">
-            <div class="cell">
-                <h2>Trevor</h2>
+        <div class=card>
+            <div class="row">
+                <div class="cell">
+                    <h2>Trevor</h2>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="cell">
-                <h2>Squat</h2>
+            <div class="row">
+                <div class="cell">
+                    <h2>Squat</h2>
+                </div>
+                <div class="cell">
+                    <h2>385</h2>
+                </div>
+                <div class="cell">
+                    <h2>405</h2>
+                </div>
+                <div class="cell">
+                    <h2>415</h2>
+                </div>
             </div>
-            <div class="cell">
-                <h2>385</h2>
+            <div class="row">
+                <div class="cell">
+                    <h2>Squat</h2>
+                </div>
+                <div class="cell">
+                    <h2>385</h2>
+                </div>
+                <div class="cell">
+                    <h2>405</h2>
+                </div>
+                <div class="cell">
+                    <h2>415</h2>
+                </div>
             </div>
-            <div class="cell">
-                <h2>405</h2>
-            </div>
-            <div class="cell">
-                <h2>415</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="cell">
-                <h2>Squat</h2>
-            </div>
-            <div class="cell">
-                <h2>385</h2>
-            </div>
-            <div class="cell">
-                <h2>405</h2>
-            </div>
-            <div class="cell">
-                <h2>415</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="cell">
-                <h2>Squat</h2>
-            </div>
-            <div class="cell">
-                <h2>385</h2>
-            </div>
-            <div class="cell">
-                <h2>405</h2>
-            </div>
-            <div class="cell">
-                <h2>415</h2>
+            <div class="row">
+                <div class="cell">
+                    <h2>Squat</h2>
+                </div>
+                <div class="cell">
+                    <h2>385</h2>
+                </div>
+                <div class="cell">
+                    <h2>405</h2>
+                </div>
+                <div class="cell">
+                    <h2>415</h2>
+                </div>
             </div>
         </div>
     </div>
