modifined the front page

--- a/html/meet_results.html
+++ b/html/meet_results.html
@@ -11,113 +11,11 @@
 <body>
     <div class="topnav">
         <a href="../index.html">Home</a>
-        <a class="active" href="./powerlift_meets.html">Power Lifting</a>
+        <a class="active" href="./powerlift_meets">Power Lifting</a>
       </div>
 
     <h1 id='title'>Meet Results</h1>
 
-    <!-- <div id="results"></div> -->
-
-    <!-- <div class="flex-container">
-        <div class=card>
-            <div class="row">
-                <div class="cell">
-                    <h2>Trevor</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="cell">
-                    <h2>Squat</h2>
-                </div>
-                <div class="cell">
-                    <h2>385</h2>
-                </div>
-                <div class="cell">
-                    <h2>405</h2>
-                </div>
-                <div class="cell">
-                    <h2>415</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="cell">
-                    <h2>Squat</h2>
-                </div>
-                <div class="cell">
-                    <h2>385</h2>
-                </div>
-                <div class="cell">
-                    <h2>405</h2>
-                </div>
-                <div class="cell">
-                    <h2>415</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="cell">
-                    <h2>Squat</h2>
-                </div>
-                <div class="cell">
-                    <h2>385</h2>
-                </div>
-                <div class="cell">
-                    <h2>405</h2>
-                </div>
-                <div class="cell">
-                    <h2>415</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="flex-container">
-        <div class="row">
-            <div class="cell">
-                <h2>Trevor</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="cell">
-                <h2>Squat</h2>
-            </div>
-            <div class="cell">
-                <h2>385</h2>
-            </div>
-            <div class="cell">
-                <h2>405</h2>
-            </div>
-            <div class="cell">
-                <h2>415</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="cell">
-                <h2>Squat</h2>
-            </div>
-            <div class="cell">
-                <h2>385</h2>
-            </div>
-            <div class="cell">
-                <h2>405</h2>
-            </div>
-            <div class="cell">
-                <h2>415</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="cell">
-                <h2>Squat</h2>
-            </div>
-            <div class="cell">
-                <h2>385</h2>
-            </div>
-            <div class="cell">
-                <h2>405</h2>
-            </div>
-            <div class="cell">
-                <h2>415</h2>
-            </div>
-        </div>
-    </div> -->
     <script type='module' src='../js/meet_results.js'></script>
 </body>
 </html>
